Backend_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: pnt-quiz
  labels:
    app: my-app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-backend
  template:
    metadata:
      labels:
        app: my-app-backend
    spec:
      containers:
      - name: backend-container
        image: 2602106856juanpriyasaputro.azurecr.io/juansaputro/handy-popularnetworktechnology-tobedeployed-backend:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: pnt-quiz
spec:
  type: ClusterIP  
  selector:
    app: my-app-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
